--- a/webpagesGL.css
+++ b/webpagesGL.css
@@ -1,19 +1,22 @@
 /*
- *Name: [First Last]
- *UnityID: [unityID]
- *Date: [Date Completed]
- *Assignment: [Assignment Name]
- *Description: [Assignment Description]
+ *Name: Michael Tejeda
+ *UnityID: mttejeda
+ *Date: Nov 6th 2024
+ *Assignment: [Guided Lab 4
+ *Description: Guided Lab Assignment, about me webpage
  */
  
 p {
-    property: value;
+    font-family: Times;
+    font-size: 16px;
+    color:#DECAFF;
+    }
+
+.table-border {
+    border: 1px solid #DECAFF;
 }
 
-.class {
-    property: value;
-}
-
-#id {
-    property:value;
+#photo-resize {
+    max-width: 250px;
+    max-height: 300px;
 }
