--- a/webpagesGL.css
+++ b/webpagesGL.css
@@ -2,7 +2,7 @@
  *Name: Michael Tejeda
  *UnityID: mttejeda
  *Date: Nov 6th 2024
- *Assignment: [Guided Lab 4
+ *Assignment: Guided Lab 4
  *Description: Guided Lab Assignment, about me webpage
  */
  
